UI: Splash Screen
#30

--- a/src/global.scss
+++ b/src/global.scss
@@ -115,5 +115,6 @@ hr {
       margin-right: 1rem;
       color: var(--text-secondary);
       font-weight: 400;
+      min-width: fit-content;
   }
 }
