cleaning & small changes

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -30,6 +30,7 @@ $editor-lightblue: #E8EDF3;
     --list-background: #F7F8F9;
     --list-border: #E6EAF4;
     --button-blue: #{$editor-lightblue};
+    --node: #{$inria-light};
 }
 
 // Dark theme not implemented yet
