--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -30,7 +30,7 @@ $editor-grayblue: #7789A6;
     --border: #{$editor-light-border};
     --shadow: #{$editor-shadow-hover};
     --shadow-outer: #{$editor-shadow-outer};
-    --list-background: #F7F8F9;
+    --item-background: #F7F8F9;
     --list-border: #E6EAF4;
     --button-blue: #{$editor-lightblue};
     --node: #{$inria-light};
