--- a/src/global.scss
+++ b/src/global.scss
@@ -68,9 +68,18 @@ body,
     background-color: var(--content);
     box-shadow: 0 1px 8px 0 var(--shadow);
     transition: all 0.2s ease-in-out;
+    cursor: inherit;
     i {
       margin: auto;
       font-size: 1.5rem;
+    }
+    &-node {
+      &:hover {
+        box-shadow: 0 2px 5px 0 var(--shadow-outer);
+      }
+      &:active {
+        opacity: .7;
+      }
     }
     &-blue {
       background-color: var(--button-blue);
@@ -87,8 +96,25 @@ body,
       }
     }
   }
+  &-close {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top:1rem;
+    right:1rem;
+    width:1.5rem;
+    height:1.5rem;
+    z-index: 10;
+    border-radius: 2rem;
+    i {
+      margin: 0;
+      font-size: 14px;
+      font-weight: 800;
+      color: var(--text);
+    }
+  }
 }
-
 
 hr {
   border: 0;
@@ -132,7 +158,7 @@ hr {
 .card-list-item {
   display: flex;
   width: 100%;
-  background-color: var(--list-background);
+  background-color: var(--item-background);
   border: 2px solid var(--list-border);
   border-radius: 6px;
   margin-bottom: .6rem;
@@ -166,4 +192,50 @@ hr {
   &-creation-animation {
     transition: all .15s ease-in-out;
   }
+}
+
+.input {
+  background-color: var(--item-background);
+  border: 1px solid var(--border);
+  border-radius: 4px;
+  padding: .5rem;
+  margin-bottom: 1.5rem;
+  font-size: 1.1rem;
+  color: var(--text);
+  outline: none;
+
+  width: 24rem;
+
+  &-file {
+    cursor: pointer;
+    &::file-selector-button {
+      display: none;
+    }
+  }
+
+  &-textarea {
+    resize: none;
+    height: 10rem;
+  }
+}
+
+.input-label {
+  margin-bottom: .5rem;
+  font-size: 1rem;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.form-icon {
+  border: 1px solid var(--border);
+  box-shadow: 0 1px 4px 0 var(--shadow-outer);
+  border-radius: 8px;
+  width: fit-content;
+  height: fit-content;
+  padding: .3rem .5rem;
+  font-size: 18px;
+}
+
+textarea {
+  font-family: inherit;
+  font-size: inherit;
 }
