--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -21,6 +21,7 @@ $editor-light-border: #DCE4F0;
 $editor-lightblue: #E8EDF3;
 $editor-shadow-outer: #ADBCD5;
 $editor-grayblue: #7789A6;
+$editor-blue: #00B3B9;
 
 [color-scheme="light"] {
     --background: #{$editor-light};
@@ -47,4 +48,5 @@ $editor-grayblue: #7789A6;
 :root {
     --inria-red: #{$inria-red};
     --editor-grayblue: #{$editor-grayblue};
+    --editor-blue: #{$editor-blue};
 }
