--- a/src/global.scss
+++ b/src/global.scss
@@ -30,6 +30,7 @@ body,
   display: flex;
   color: var(--text);
   border-radius: 6px;
+  transition: box-shadow 0.2s ease-in-out;
   i {
     margin-right: 0.5rem;
     font-size: 1.5rem;
@@ -43,7 +44,10 @@ body,
     justify-content: center;
     transition: box-shadow 0.2s ease-in-out;
     &:hover {
-      box-shadow:0 1px 8px 0  var(--shadow);
+      box-shadow: 0 1px 8px 0 var(--shadow-outer);
+    }
+    &:active {
+      opacity: .7;
     }
   }
   &-large {
@@ -72,8 +76,9 @@ body,
       &:hover {
         box-shadow: 0 2px 5px 0 var(--shadow-outer);
       }
-      &:active {
-        opacity: .7;
+      &:active, &.active {
+        color: var(--editor-blue);
+        border: 1px solid var(--editor-blue);
       }
     }
     &-blue {
@@ -107,6 +112,26 @@ body,
       font-size: 14px;
       font-weight: 800;
       color: var(--text);
+    }
+  }
+  &-form {
+    padding: .6rem 1rem;
+    border: 1px solid var(--border);
+    border-radius: 8px;
+    font-size: 1rem;
+    text-align: center;
+    background-color: var(--content);
+    max-width: fit-content;
+    margin-right: .8rem;
+    margin-bottom: .8rem;
+    &:hover {
+      box-shadow: 0 2px 5px 0 var(--shadow-outer);
+    }
+    &:active {
+      opacity: .7;
+    }
+    i {
+      font-size: 1.2rem;
     }
   }
 }
@@ -202,7 +227,9 @@ hr {
   width: 24rem;
 
   &-file {
+    font-size: 1.1rem;
     cursor: pointer;
+    flex-grow: 2;
     &::file-selector-button {
       display: none;
     }
@@ -210,7 +237,10 @@ hr {
 
   &-textarea {
     resize: none;
-    height: 10rem;
+    min-height: 10rem;
+  }
+  &:focus {
+    outline: 1px solid var(--editor-blue);
   }
 }
 
@@ -233,4 +263,11 @@ hr {
 textarea {
   font-family: inherit;
   font-size: inherit;
+}
+
+.screen-node {
+  transition: all 0.2s ease-in-out;
+  &:hover {
+    box-shadow: 0 2px 5px 0 var(--shadow-outer);
+}
 }
