Issue #72: Card Group Field WIP
For the moment we can only create normal and checkbox card

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -21,7 +21,7 @@ $editor-light-border: #DCE4F0;
 $editor-lightblue: #E8EDF3;
 $editor-shadow-outer: #ADBCD5;
 $editor-grayblue: #7789A6;
-$editor-blue: #00B3B9;
+$editor-blue: #00B3E9;
 
 [color-scheme="light"] {
     --background: #{$editor-light};
