Issue #72 Card group WIP move card up & down with button

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -49,4 +49,5 @@ $editor-blue: #00B3E9;
     --inria-red: #{$inria-red};
     --editor-grayblue: #{$editor-grayblue};
     --editor-blue: #{$editor-blue};
+    --editor-blue-shadow: rgba(0, 179, 233, 0.3);
 }
