Arrow marker end

--- a/src/global.scss
+++ b/src/global.scss
@@ -316,3 +316,10 @@ textarea {
     margin-bottom: .5rem;
   }
 }
+
+// .vue-flow__handle{
+//   background: var(--inria-red);
+//   &.connected {
+//     background: var(--text);
+//   }
+// }
