--- a/src/global.scss
+++ b/src/global.scss
@@ -79,7 +79,6 @@ body,
       height: calc(60px + 2rem);
       margin: 0;
       span {
-        margin-top: 0;
         margin: .5rem auto auto auto;
       }
       i {
@@ -349,7 +348,11 @@ textarea {
       margin-right: .5rem;
       margin-left: 0;
   }
-  &:hover {
+  &:disabled{
+    opacity: 0.5;
+    cursor: default;
+  }
+  &:not(:disabled):hover {
     background-color: var(--content);  
     box-shadow: 0 1px 8px 0 var(--shadow);
   }
