Fix dragdrop icon

--- a/src/_icon.scss
+++ b/src/_icon.scss
@@ -76,7 +76,7 @@
 .icon-dragdrop-bouton:before {
   content: "\e912";
 }
-.icon-dragdrop-panneau:before {
+.icon-dragdrop:before {
   content: "\e913";
 }
 .icon-ecran:before {
