Issue #180: Adding validation modal"

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -57,4 +57,5 @@ $editor-node-ghost: #D6E2F0;
     --editor-blue: #{$editor-blue};
     --editor-blue-shadow: rgba(0, 179, 233, 0.3);
     --editor-red: #{$editor-red};
+    --inria-grey: #{$inria-grey};
 }
