--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -58,4 +58,5 @@ $editor-node-ghost: #D6E2F0;
     --editor-blue-shadow: rgba(0, 179, 233, 0.3);
     --editor-red: #{$editor-red};
     --inria-grey: #{$inria-grey};
+    --node-hover: #E9EFF6;
 }
