Issue #148 : add support for legacy conditional contents

--- a/src/_icon.scss
+++ b/src/_icon.scss
@@ -61,6 +61,10 @@
 .icon-condition:before {
   content: "\e90d";
 }
+.icon-condition-legacy:before {
+  content: "\e90d";
+  color:lightgrey;
+}
 .icon-contenu-panneau:before {
   content: "\e90e";
 }
