--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -21,6 +21,7 @@ $editor-light-border: #DCE4F0;
 $editor-lightblue: #E8EDF3;
 $editor-shadow-outer: #ADBCD5;
 $editor-grayblue: #7789A6;
+$editor-dashed-border: #8C9AB9;
 $editor-blue: #00B3E9;
 $node-active: #E1F4FA;
 $editor-red: #E63312;
@@ -33,6 +34,7 @@ $editor-node-ghost: #D6E2F0;
     --text: #{$inria-blue};
     --text-secondary: #8C9AB9;
     --border: #{$editor-light-border};
+    --dashed-border: #{$editor-dashed-border};
     --shadow: #{$editor-shadow-hover};
     --shadow-outer: #{$editor-shadow-outer};
     --item-background: #F7F8F9;
