--- a/src/_icon.scss
+++ b/src/_icon.scss
@@ -25,6 +25,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-cible:before {
+  content: "\e900";
+  color: #384257;
+}
 .icon-arriere:before {
   content: "\e901";
 }
@@ -37,6 +41,11 @@
 .icon-avant:before {
   content: "\e904";
 }
+
+.icon-badge:before {
+  content: "\e905";
+}
+
 .icon-bas:before {
   content: "\e906";
 }
