Issue #263: make sidebar resizable

--- a/src/global.scss
+++ b/src/global.scss
@@ -486,6 +486,19 @@ g.selected {
 .tox-tinymce {
   margin-bottom: 1.5rem;
 }
+
+.tox-statusbar {
+  border: none !important;
+
+  &__branding {
+    display: none;
+  }
+
+  &__path {
+    display: none !important;
+  }
+}
+
 [id^="tiny-vue_"] {
   height: 340px;
   border: 2px solid var(--border);
