Issue #256: highlight element on id hover & fix cancel select node mode

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -26,6 +26,8 @@ $editor-blue: #00B3E9;
 $node-active: #E1F4FA;
 $editor-red: #E63312;
 
+$editor-green: #00D957;
+
 $editor-node-ghost: #D6E2F0;
 
 [color-scheme="light"] {
@@ -61,4 +63,6 @@ $editor-node-ghost: #D6E2F0;
     --editor-red: #{$editor-red};
     --inria-grey: #{$inria-grey};
     --node-hover: #E9EFF6;
+
+    --editor-green: #{$editor-green};
 }
