--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -1,11 +1,11 @@
-@mixin sm {
-    @media (max-width: 1200px) {
-        @content;
-    }
-}
-
-@mixin md {
-    @media (min-width: 1200px) {
-        @content;
-    }
-}
+//@mixin sm {
+//    @media (max-width: 1200px) {
+//        @content;
+//    }
+//}
+//
+//@mixin md {
+//    @media (min-width: 1200px) {
+//        @content;
+//    }
+//}
