--- a/src/global.scss
+++ b/src/global.scss
@@ -305,7 +305,7 @@ hr {
 
 .input-label {
     display: flex;
-    gap: .3rem;
+    gap: 0.3rem;
     margin-bottom: 0.7rem;
     font-size: 1rem;
     font-family: 'Open Sans', sans-serif;
@@ -509,17 +509,30 @@ g.selected {
 // TinyMCE Editor
 .tox-tinymce {
     margin-bottom: 1.5rem;
+    background: var(--item-background);
     border: 1px solid var(--border) !important;
 
     &.focus {
         border: 1px solid var(--editor-blue) !important;
         box-shadow: 0 1px 8px 0 var(--editor-blue-shadow);
     }
+
+    iframe {
+        background: var(--item-background) !important;
+    }
 }
 
+.tox-editor-header {
+    border-bottom: none !important;
+    box-shadow: none !important;
+}
+
+.tox-sidebar-wrap {
+}
 
 .tox-statusbar {
     border: none !important;
+    background: var(--item-background) !important;
 
     &__branding {
         display: none;
