fix: page condition hover working

--- a/src/global.scss
+++ b/src/global.scss
@@ -260,7 +260,7 @@ hr {
     }
 
     &.highlight {
-        border: 2px solid var(--editor-green) !important;
+        border: 2px solid var(--editor-yellow) !important;
     }
 }
 
